--- a/style/tablet.css
+++ b/style/tablet.css
@@ -1,10 +1,14 @@
-.images{
+/* .images{
     width: 45%;
     height: 58%;
     position: absolute;
     bottom: 20vh;
     right: 0px;
-}
+} */
 .hero{
     height: 80vh;
+}
+.images{
+    display: none;
+    right: 0px;
 }
